--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /AricSortedSet/obj
 /AricSkipList/bin/Debug/net8.0
 /AricSkipList/obj
+/AricSkipListTests/bin/Debug/net8.0
+/AricSkipListTests/obj/Debug/net8.0
